完成数据脱敏的部分，后续会加上参数加密功能

--- a/springboot-demo/pom.xml
+++ b/springboot-demo/pom.xml
@@ -17,7 +17,8 @@
     <properties>
         <java.version>17</java.version>
         <jakarta.jakartaee-api.version>10.0.0</jakarta.jakartaee-api.version>
-        <knife4j-openapi3-jakarta-spring-boot-starter.version>4.3.0</knife4j-openapi3-jakarta-spring-boot-starter.version>
+        <knife4j-openapi3-jakarta-spring-boot-starter.version>4.4.0
+        </knife4j-openapi3-jakarta-spring-boot-starter.version>
     </properties>
     <dependencies>
         <dependency>
