--- a/spring-boot-starter-simple-restful/pom.xml
+++ b/spring-boot-starter-simple-restful/pom.xml
@@ -99,6 +99,18 @@
             <version>1.18.32</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.17.1</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.17.1</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
