添加只过滤本地包的代码

--- a/springboot-demo/src/main/resources/application.yml
+++ b/springboot-demo/src/main/resources/application.yml
@@ -22,6 +22,4 @@ springdoc:
       packages-to-scan: com.github.ly.demo.controller
 
 simple-restful:
-  exclude-packages:
-    - org.springdoc.**
-    - springfox.**
+  base-package: com.github.ly.demo
