修改测试出来的bug。

--- a/springboot-demo/src/main/resources/application.yml
+++ b/springboot-demo/src/main/resources/application.yml
@@ -23,4 +23,5 @@ springdoc:
 
 simple-restful:
   base-package: com.github.ly.demo
-  private-key: "$#ED25FCADD"
+  private-key: "VybmFtZSI6"
+  request-body-encryption: true
