--- a/docs/package.json
+++ b/docs/package.json
@@ -24,6 +24,8 @@
     "serve": "vitepress serve "
   },
   "dependencies": {
-    "gitalk": "^1.8.0"
+    "@types/node": "^20.14.11",
+    "gitalk": "^1.8.0",
+    "vue": "^3.4.33"
   }
 }
