--- a/docs/tsconfig.json
+++ b/docs/tsconfig.json
@@ -1,5 +1,21 @@
 {
+  "include": [
+    ".vitepress/theme/**/*.ts",
+    ".vitepress/theme/**/*.d.ts",
+    ".vitepress/theme/**/*.tsx",
+    ".vitepress/theme/**/*.vue"
+  ],
+  "exclude": [
+    "node_modules",
+    ".vitepress/cache"
+  ],
   "compilerOptions": {
+    "baseUrl": ".",
+    "paths": {
+      "@/*": [
+        "src/*"
+      ]
+    },
     "target": "esnext"
     /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */,
     "module": "esnext"
